fix z-index for modal

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.25);
-  z-index: 100;
+  z-index: 99999999;
   overflow: hidden;
   display: flex;
   justify-content: center;
